--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@ body {
 
 @layer base {
   :root {
-    /* COLOR NEON CIBERPUNK */
+    /* COLOR MORADO GALAXIA */
     /* Modo claro */
     --background: 260 40% 97%;
     --foreground: 260 40% 10%;
@@ -61,6 +61,7 @@ body {
     --ring: 260 80% 50%;
   }
 }
+/* COLOR BASE */
 /* :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
